--- a/microservice-livros/src/main/resources/application.yml
+++ b/microservice-livros/src/main/resources/application.yml
@@ -3,18 +3,18 @@ spring:
     driver-class-name: org.postgresql.Driver
     username: postgres
     password: postgres
-    url: jdbc:postgresql://localhost:5432/biblioteca-clientes
+    url: jdbc:postgresql://localhost:5432/biblioteca-livros
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: none
 server:
-  port: 8001
+  port: 8002
   servlet:
     context-path: '/api/service/'
 keycloak:
   realm: 'biblioteca'
-  resource: 'clientes'
+  resource: 'livros'
   auth-server-url: http://localhost:8000/auth
   bearer-only: true
   use-resource-role-mappings: true
