adiciona kafka no projeto clientes

--- a/microservice-emprestimos/pom.xml
+++ b/microservice-emprestimos/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>br.com.diegoalexandrooliveira.biblioteca</groupId>
-    <artifactId>microservice-clientes</artifactId>
+    <artifactId>microservice-emprestimos</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>microservice-clientes</name>
-    <description>Microserviço de clientes - Biblioteca</description>
+    <name>microservice-emprestimos</name>
+    <description>Microserviço de emprestimos - Biblioteca</description>
     <properties>
         <java.version>11</java.version>
     </properties>
@@ -97,19 +97,6 @@
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-spring-boot-starter</artifactId>
         </dependency>
-
-        <!-- Mensageria -->
-        <dependency>
-            <groupId>org.springframework.kafka</groupId>
-            <artifactId>spring-kafka</artifactId>
-            <version>2.6.5</version>
-        </dependency>
-        <dependency>
-            <groupId>io.confluent</groupId>
-            <artifactId>kafka-avro-serializer</artifactId>
-            <version>6.1.0</version>
-        </dependency>
-
     </dependencies>
 
     <dependencyManagement>
@@ -142,23 +129,6 @@
                     </excludes>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.avro</groupId>
-                <artifactId>avro-maven-plugin</artifactId>
-                <version>1.10.1</version>
-                <executions>
-                    <execution>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>schema</goal>
-                        </goals>
-                        <configuration>
-                            <sourceDirectory>${project.basedir}/src/main/avro/</sourceDirectory>
-                            <outputDirectory>${project.basedir}/target/generated-sources/avro/</outputDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
     <repositories>
@@ -174,10 +144,6 @@
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
-        </repository>
-        <repository>
-            <id>confluent</id>
-            <url>https://packages.confluent.io/maven/</url>
         </repository>
     </repositories>
     <pluginRepositories>
