--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
       env:
         GITLAB_HOSTNAME: "gitlab.com"
         GITLAB_USERNAME: "diegoalexandrooliveira"
-        GITLAB_PASSWORD: ${{ secrets.GITLABTOKEN }} // Generate here: https://gitlab.com/profile/personal_access_tokens
+        GITLAB_PASSWORD: ${{ secrets.GITLAB_PASSWORD }} // Generate here: https://gitlab.com/profile/personal_access_tokens
         GITLAB_PROJECT_ID: "25169416"
         GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }} // https://docs.github.com/en/actions/reference/authentication-in-a-workflow#about-the-github_token-secret
