--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,5 @@
+before_script:
+    - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD" $DOCKER_REGISTRY
 build-clientes:
   stage: build
   script:
@@ -9,6 +11,7 @@ build-clientes:
       docker build -t diegoalexandrooliveira/biblioteca-clientes:latest -f devops/Dockerfile-CD .
       docker rm -f teste-clientes-build
       docker rmi teste-clientes
+      docker push diegoalexandrooliveira/biblioteca-clientes:latest
 
 build-livros:
   stage: build
@@ -21,3 +24,4 @@ build-livros:
       docker build -t diegoalexandrooliveira/biblioteca-livros:latest -f devops/Dockerfile-CD .
       docker rm -f teste-livros-build
       docker rmi teste-livros
+      docker push diegoalexandrooliveira/biblioteca-livros:latest
