--- a/microservice-clientes/src/main/resources/application.yml
+++ b/microservice-clientes/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
     hibernate:
       ddl-auto: none
   kafka:
+    bootstrap-servers: ${KAFKA_URL:localhost:9092}
     properties:
       schema.registry.url: ${KAFKA_REGISTRY_URL:http://localhost:8040}
     producer:
