--- a/microservice-emprestimos/src/main/resources/application.yml
+++ b/microservice-emprestimos/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
     bootstrap-servers: ${KAFKA_URL:172.17.0.1:29092}
     properties:
       schema.registry.url: http://localhost:8040
+      specific.avro.reader: true
     consumer:
       value-deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
 server:
