--- a/microservice-emprestimos/src/main/resources/application.yml
+++ b/microservice-emprestimos/src/main/resources/application.yml
@@ -1,10 +1,12 @@
 spring:
   data:
     mongodb:
+      host: ${MONGO_HOST:localhost}
+      port: ${MONGO_PORT:27017}
       database: emprestimos
       username: root
       password: root
-      authentication-database: admin
+      authentication-database: ${MONGO_AUTH_DB:admin}
   kafka:
     bootstrap-servers: ${KAFKA_URL:172.17.0.1:29092}
     properties:
