--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,7 @@ emprestimos:
     - |
       docker build -t teste-emprestimos -f microservice-emprestimos/devops/Dockerfile-CI .
       docker run --name teste-emprestimos-build -v /var/run/docker.sock:/var/run/docker.sock teste-emprestimos
-      docker cp teste-livros-build:/app/sources/target/microservice-emprestimos-0.0.1-SNAPSHOT.jar microservice-emprestimos/app.jar
+      docker cp teste-emprestimos-build:/app/sources/target/microservice-emprestimos-0.0.1-SNAPSHOT.jar microservice-emprestimos/app.jar
       cd microservice-emprestimos
       docker build -t diegoalexandrooliveira/biblioteca-emprestimos:latest -f devops/Dockerfile-CD .
       docker rm -f teste-emprestimos-build
