--- a/microservice-clientes/devops/Dockerfile-CD
+++ b/microservice-clientes/devops/Dockerfile-CD
@@ -1,4 +1,4 @@
-FROM ghcr.io/graalvm/graalvm-ce:latest:java11-21.0.0.2
+FROM ghcr.io/graalvm/graalvm-ce:java11-21.0.0.2
 
 COPY ./app.jar /app/app.jar
 
