--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,9 +11,11 @@ clientes:
       docker cp teste-clientes-build:/app/sources/target/microservice-clientes-0.0.1-SNAPSHOT.jar microservice-clientes/app.jar
       cd microservice-clientes
       docker build -t diegoalexandrooliveira/biblioteca-clientes:latest -f devops/Dockerfile-CD .
+      docker push diegoalexandrooliveira/biblioteca-clientes:latest
+  after_script:
+    - |
       docker rm -f teste-clientes-build
       docker rmi teste-clientes
-      docker push diegoalexandrooliveira/biblioteca-clientes:latest
 
 livros:
   stage: build
@@ -24,9 +26,11 @@ livros:
       docker cp teste-livros-build:/app/sources/target/microservice-livros-0.0.1-SNAPSHOT.jar microservice-livros/app.jar
       cd microservice-livros
       docker build -t diegoalexandrooliveira/biblioteca-livros:latest -f devops/Dockerfile-CD .
+      docker push diegoalexandrooliveira/biblioteca-livros:latest
+  after_script:
+    - |
       docker rm -f teste-livros-build
       docker rmi teste-livros
-      docker push diegoalexandrooliveira/biblioteca-livros:latest
 
 emprestimos:
   stage: build
@@ -37,6 +41,8 @@ emprestimos:
       docker cp teste-emprestimos-build:/app/sources/target/microservice-emprestimos-0.0.1-SNAPSHOT.jar microservice-emprestimos/app.jar
       cd microservice-emprestimos
       docker build -t diegoalexandrooliveira/biblioteca-emprestimos:latest -f devops/Dockerfile-CD .
+      docker push diegoalexandrooliveira/biblioteca-emprestimos:latest
+  after_script:
+    - |
       docker rm -f teste-emprestimos-build
       docker rmi teste-emprestimos
-      docker push diegoalexandrooliveira/biblioteca-emprestimos:latest
