--- a/microservice-clientes/devops/Dockerfile-CD
+++ b/microservice-clientes/devops/Dockerfile-CD
@@ -12,4 +12,5 @@ ENTRYPOINT exec java \
             -Dspring.datasource.url=$DB_URL \
             -Dkeycloak.auth-server-url=$KEYCLOAK_URL \
             -Dspring.kafka.bootstrap-servers=$KAFKA_URL \
+            -Dserver.port=8080 \
             -jar app.jar
