--- a/microservice-clientes/pom.xml
+++ b/microservice-clientes/pom.xml
@@ -72,6 +72,12 @@
             <version>1.15.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>kafka</artifactId>
+            <version>1.15.1</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
